--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.wxeapapp">
 
+    <uses-sdk tools:overrideLibrary="br.com.simplepass.loading_button_lib"/>
+
     <uses-permission android:name="android.permission.READ_LOGS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -18,8 +20,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-    <uses-sdk tools:overrideLibrary="br.com.simplepass.loading_button_lib"></uses-sdk>
-
     <application
         android:name=".EAPApplication"
         android:allowBackup="true"
@@ -27,7 +27,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
 
         <!-- 信鸽 -->
@@ -72,7 +71,6 @@
             android:name="com.tencent.mid.api.MidProvider"
             android:authorities="com.wxeapapp.TENCENT.MID.V3"
             android:exported="true"/>
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.wxeapapp.fileprovider"
@@ -80,20 +78,18 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths_public"></meta-data>
+                android:resource="@xml/file_paths_public"/>
         </provider>
 
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustResize">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.web.WebActivity"
@@ -103,6 +99,8 @@
         <activity
             android:name=".ui.select.SwitchSystemActivity"
             android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".ui.transition.TransitionActivity">
         </activity>
     </application>
 
