--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,8 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible|adjustResize">
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -99,8 +100,6 @@
         <activity
             android:name=".ui.select.SwitchSystemActivity"
             android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".ui.transition.TransitionActivity">
         </activity>
     </application>
 
