--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,8 @@ dependencies {
     compile 'com.tencent.sonic:sdk:1.0.0'
     compile 'com.tencent.xinge:xinge:3.1.6-alpha'
     compile 'com.tencent.mid:mid:3.72.4-alpha'
-    compile 'com.just.agentwebX5:agentwebX5:1.0.0'
+//    compile 'com.just.agentwebX5:agentwebX5:1.0.0'
+    compile 'com.just.agentweb:agentweb:2.0.0'
     compile 'com.zhihu.android:matisse:0.5.0-alpha4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'br.com.simplepass:loading-button-android:1.8.0'
