--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,12 +68,11 @@ dependencies {
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //rx系列
-    compile "com.android.support:design:$support_version"
     compile "io.reactivex.rxjava2:rxjava:$rxJava_version"
     compile "io.reactivex.rxjava2:rxkotlin:$rxKotlin_version"
     compile "io.reactivex.rxjava2:rxandroid:$rxAndroid_version"
     compile "com.jakewharton.rxbinding2:rxbinding:$rxBinding_version"
-    compile "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxBinding_version"
+//    compile "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxBinding_version"
     compile "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBinding_version"
     //retrofit & okHttp
     compile "com.squareup.retrofit2:retrofit:$retrofit2_version"
@@ -98,5 +97,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'br.com.simplepass:loading-button-android:1.8.0'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     testCompile 'junit:junit:4.12'
 }
