--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven {
+            url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
+        }
     }
 }
 
