--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,6 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.aliyun.ams:alicloud-android-hotfix:3.1.1'
 
 }
