--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         maven {
             url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
         }
+        maven {
+            url "http://maven.aliyun.com/nexus/content/repositories/releases"
+        }
     }
 }
 
