--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven {
-            url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
-        }
-        maven {
-            url "http://maven.aliyun.com/nexus/content/repositories/releases"
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases'
         }
     }
 }
