--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.aliyun.ams:alicloud-android-hotfix:3.1.1'
+    compile 'me.drakeet.materialdialog:library:1.3.1'
 
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
     compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
