--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.wxeapapp"
         minSdkVersion 19
@@ -97,10 +97,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'br.com.simplepass:loading-button-android:1.8.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.aliyun.ams:alicloud-android-hotfix:3.1.1'
     compile 'me.drakeet.materialdialog:library:1.3.1'
+    compile 'me.yokeyword:swipebackfragment:0.4.0'
 
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
     compile 'com.tencent.bugly:nativecrashreport:latest.release' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
